@@ -45,14 +45,23 @@ function exists_p(path) {
 
 function spawnUserLog_p(pw, appSpec, endpoint, logFilePath, workerId) {
   var prom = Q.defer();
-  var logDir = path.dirname(logFilePath); 
 
-  // Ensure that the log directory exists.
-  var rm = child_process.spawn(paths.projectFile('scripts/mkdir.sh'), [logDir, pw.uid, pw.gid], 
+  let mode = 0o660;
+  if (typeof(appSpec.settings.appDefaults.logFileMode) === "number" ||
+      typeof(appSpec.settings.appDefaults.logFileMode) === "string") {
+    mode = appSpec.settings.appDefaults.logFileMode;
+  }
+  // Convert numeric mode to octal
+  if (typeof(mode) === "number") {
+    mode = mode.toString(8);
+  }
+
+  // Create the log file (and directory if needed)
+  var rm = child_process.spawn(paths.projectFile('scripts/create-log.sh'), [logFilePath, mode],
     {uid: pw.uid, gid: pw.gid});
   rm.on('close', function (code) {
     if (code != 0){
-      var err = "Failed to create log directory: " + logDir +", " + pw.uid + ":" + pw.gid;
+      var err = "Failed to create log directory: " + logDir +", " + mode;
       logger.error(err);
       prom.reject(err);
     }
